2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed block mode update.

2010-04-27  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Tweak search animation.
	  Disable RedrawOnAllocate because we do it anyway.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Addad Tag property.

2010-04-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 598203 - Tooltip
	  shows too fast, follows mouse, and flickers'.

2010-04-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: Optimized text link
	  mode & fixed a mac issue.

2010-04-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/CodeSegmentEditorWindow.cs:
	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Fixed 'Bug
	  597670 - Focussed fold tooltip has too many lines'.

2010-04-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Fixed 'Bug
	  597668 - Focus message obscures text in small fold
	  tooltips'.

2010-04-21  Mike Krüger  <mkrueger@novell.com>

	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml: Fixed 'Bug 597662 - Symbol
	  highlight makes caret hard to see'.

2010-04-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorContainer.cs: Fixed
	  'SetChidrenPositions'

2010-04-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/LineSegment.cs: fixed GetIndentation.

2010-04-16  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: handled rare x11 exception.

2010-04-16  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Optimized error bubbles.

2010-04-16  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: Handled possible null
	  ref.

2010-04-15  Mike Krüger  <mkrueger@novell.com>
